Fixed copyright font size on mobile

--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -79,6 +79,8 @@
 
     .text-content{margin:10px 50px;}
 
+    #copyright p{font-size:17px }
+
 }
 
 @media only screen 
